argocd/vault-agent.yaml
# This is just a NGINX reversy proxy that redirects traffic to external vault VM that is on the same subnet
# as host of this k8s cluster. This is most probably temporary until I find better solution
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-agent
  namespace: argocd
spec:
  selector:
    matchLabels:
      app: vault-agent
  template:
    metadata:
      labels:
        app: vault-agent
    spec:
      hostNetwork: true
      containers:
        - name: vault-agent
          image: nginx
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/nginx.conf
          ports:
            - containerPort: 80
      volumes:
        - name: config
          hostPath:
            # directory location on host
            path: ./nginx.conf
            # this field is optional
            type: File
---
apiVersion: v1
kind: Service
metadata:
  name: vault-agent
spec:
  selector:
    app: vault-agent
  ports:
    - port: 80
      targetPort: 80
